welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
	return vuBiscuit = true
                         ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
recule(6);
      ^