welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit = false;
avance(6);
if (estSurBiscuit()){
	return vuBiscuit = true
}
recule(6);
}
